# graduate_work

./: .env.example  .gitignore  .pre-commit-config.yaml  Grad_analitic.ipynb  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
als_top/: .env.example  requirements.txt
ugc/: .env.example  README.md  docker-compose.yml  pyproject.toml
ugc/backend/apache_airflow_etl/: Dockerfile  requirements.txt
ugc/backend/apache_airflow_etl/src/: storages.py
ugc/backend/apache_airflow_etl/src/apache_airflow/dags/: etl_adminpanel_clickhouse.py
ugc/backend/apache_airflow_etl/src/clickhouse/: client.py
ugc/backend/apache_airflow_etl/src/config/: base.py
ugc/backend/apache_airflow_etl/src/etl_process/: base.py  etls.py
ugc/backend/apache_airflow_etl/src/extractor/: base.py  file.py  http.py
ugc/backend/apache_airflow_etl/src/loader/: base.py  clickhouse.py
ugc/backend/apache_airflow_etl/src/models/: movie.py
ugc/backend/apache_airflow_etl/src/transformer/: base.py
ugc/backend/clickhouse_initer/: airflow.Dockerfile  requirements.txt
ugc/backend/clickhouse_initer/mapping/: node[1].sql  node[2].sql  node[3].sql  node[4].sql
ugc/backend/clickhouse_initer/src/: main.py  storages.py
ugc/backend/clickhouse_initer/src/apache_airflow/dags/: etl_adminpanel_clickhouse.py
ugc/backend/clickhouse_initer/src/clickhouse/: client.py  loader.py
ugc/backend/clickhouse_initer/src/config/: base.py
ugc/backend/clickhouse_initer/src/etl/: base.py  etls.py
ugc/backend/clickhouse_initer/src/extractor/: base.py  file.py  http.py
ugc/backend/clickhouse_initer/src/loader/: base.py
ugc/backend/clickhouse_initer/src/models/: movie.py
ugc/backend/clickhouse_initer/src/transformer/: base.py  movie.py  movie_frame.py
ugc/backend/producer_storage/: requirements.txt
ugc/backend/producer_storage/src/: main.py
ugc/backend/producer_storage/src/api/v1/: movies.py
ugc/backend/producer_storage/src/core/: config.py
ugc/backend/producer_storage/src/models/: movie.py
ugc/backend/producer_storage/src/resources/: json_serializer.py  serializer.py  string_serializer.py
ugc/backend/producer_storage/src/services/producer/: kafka.py
ugc/clickhouse/: node-keeper.Dockerfile  node.Dockerfile
ugc/clickhouse/config/: metrika.xml
ugc/clickhouse/config/node3/: users.xml
ugc/clickhouse/server_config/: enable_keeper.xml  metrika.xml
ugc/clickhouse/server_config/config.d/: macros.xml  remote_servers.xml  use_keeper.xml
ugc/ksqldb/: schema.sql
(+146 files in other folders)
