[tool.poetry]
name = "graduate-work"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.1"
tqdm = "^4.64.1"
python-dotenv = "^0.21.1"
loguru = "^0.6.0"
motor = "^3.1.1"
backoff = "^2.2.1"
python-dateutil = "2.4"
numpy = "^1.24.1"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
